# scrub

./: LICENSE  MANIFEST.in  Makefile  README.md  dev-environment.yml  dev-requirements.txt  pyproject.toml  requirements.txt  scrub_cli  setup.cfg  setup.py
.github/: greetings.yml  pull_request_template.md
.github/workflows/: anchore-syft.yml  ci.yml  codeql.yml  python-publish.yml
.github/workflows/codeql/: codeql-config.yml
docs/: Makefile  README.md  _config.yml  authors.md  authors.rst  conf.py  configuration-inputs.md  configuration.md  configuration.rst  contributing.md  contributing.rst  faq.md  faq.rst  filtering.md  filtering.rst  index.rst  installation.md  installation.rst  output.md  output.rst  overview.rst  release-checklist.md  reviewing.md  reviewing.rst  troubleshooting.md  troubleshooting.rst  usage.md  usage.rst  utilities.md  utilities.rst
scrub/: __init__.py  module_helper.py  scrub.cfg  scrub_cli.py  scrubme.py
scrub/targets/collaborator/: do_collaborator.py
scrub/targets/gui/: do_gui.py
scrub/targets/scrub_gui/: do_scrub_gui.py
scrub/tools/codeql/: do_codeql.py
scrub/tools/codesonar/: do_codesonar.py
scrub/tools/compiler/: do_gbuild.py  do_gcc.py  do_javac.py  get_gbuild_warnings.py  get_javac_warnings.py
scrub/tools/coverity/: do_coverity.py  (+1 more)
scrub/utils/: diff_results.py  do_clean.py  scrub_defaults.cfg  scrub_utilities.py  translate_results.py
tests/: asserts.py  helpers.py  test_cli.py  test_errors.py  test_integration.py  test_target.py  test_tool.py  test_utils.py  verify_output.py
tests/integration_tests/: README.md
(+222 files in other folders)
