[metadata]
author = Lyle Barner
author_email = lyle.barner@jpl.nasa.gov
python_requires = >=3.6
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
description = SCRUB is an orchestration and aggregation tool for static code analysis tools.
keywords = scrub
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
name = nasa-scrub
project_urls =
    Bug Tracker = https://github.com/nasa/scrub/issues
    Documentation = https://nasa.github.io/scrub
    Source = https://github.com/nasa/scrub
url = https://github.com/nasa/scrub
version = 2.6.1

[options]
include_package_data = True
install_requires =
packages = find:
setup_requires =
    setuptools
test_suite = tests
tests_require =
    pytest
zip_safe = False

[options.entry_points]
console_scripts =
    scrub = scrub.scrub_cli:main

[options.packages.find]
exclude =
    tests

[bumpversion]
new_version = 2.6.1
current_version = 2.6.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:openscrub/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest
